--- a/reactprj/package.json
+++ b/reactprj/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "ol": "^8.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.0",
+    "rlayers": "^2.2.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
