--- a/reactprj/package.json
+++ b/reactprj/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^4.12.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.21.0",
+    "react-speech-kit": "^3.0.1",
     "rlayers": "^2.2.0",
     "uuid": "^9.0.1"
   },
